namespaces/live.cloud-platform.service.justice.gov.uk/helloworldsw-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helloworldsw-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "helloworld"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-helloworld-ruby-app"
    cloud-platform.justice.gov.uk/team-name: "webops"
    cloud-platform.justice.gov.uk/review-after: "2022-08-25"
